--- a/public/css/user.css
+++ b/public/css/user.css
@@ -1,7 +1,6 @@
 .user-info {
-    margin: 10px 0;
-    background: #fafafa;
-    border: 1px solid silver;
+    font-size: 24px;
+    margin: 10px 0 200px 0;
     padding: 20px 3%;
     width: 94%;
 }
